# resource/swagger/swagger_output.json
@@ -33,18 +33,134 @@
     "application/json"
   ],
   "paths": {
-    "/client": {
-      "put": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
-        "responses": {}
-      },
+    "/clientes": {
       "get": {
         "tags": [
-          "Cliente"
+          "Clientes"
         ],
         "description": "Endpoint para eliminar un cliente.",
+        "parameters": [
+          {
+            "name": "id",
+            "description": "ID de cliente."
+          }
+        ],
+        "responses": {}
+      },
+      "put": {
+        "tags": [
+          "Clientes"
+        ],
+        "description": "Endpoint para modificar un cliente.",
+        "parameters": [
+          {
+            "name": "id",
+            "description": "ID de cliente."
+          },
+          {
+            "name": "nombre",
+            "description": "Nombre del cliente."
+          },
+          {
+            "name": "apellido",
+            "description": "Apellido del cliente."
+          },
+          {
+            "name": "email",
+            "description": "Emaill de cliente."
+          },
+          {
+            "name": "domicilio_barrio",
+            "description": "ID de cliente."
+          },
+          {
+            "name": "domicilio_calle",
+            "description": "ID de cliente."
+          },
+          {
+            "name": "domicilio_ciudad",
+            "description": "ID de cliente."
+          },
+          {
+            "name": "domicilio_numero",
+            "description": "ID de cliente."
+          },
+          {
+            "name": "domicilio_piso",
+            "description": "ID de cliente."
+          },
+          {
+            "name": "domicilio_apartamento",
+            "description": "ID de cliente."
+          },
+          {
+            "name": "fecha_nacimiento",
+            "description": "ID de cliente."
+          },
+          {
+            "name": "pregunta1",
+            "description": "ID de cliente."
+          },
+          {
+            "name": "pregunta1_respuesta",
+            "description": "ID de cliente."
+          },
+          {
+            "name": "pregunta2",
+            "description": "ID de cliente."
+          },
+          {
+            "name": "pregunta2_respuesta",
+            "description": "ID de cliente."
+          },
+          {
+            "name": "pregunta3",
+            "description": "ID de cliente."
+          },
+          {
+            "name": "pregunta3_respuesta",
+            "description": "ID de cliente."
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/clientes/dni": {
+      "get": {
+        "tags": [
+          "Clientes"
+        ],
+        "description": "Endpoint para buscar un cliente por el DNI.",
+        "parameters": [
+          {
+            "name": "dni",
+            "description": "DNI de cliente."
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/clientes/cbu": {
+      "get": {
+        "tags": [
+          "Clientes"
+        ],
+        "description": "Endpoint para buscar un cliente por el CBU.",
+        "parameters": [
+          {
+            "name": "cbu",
+            "description": "CBU de cliente."
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/clientes/verificar": {
+      "post": {
+        "tags": [
+          "Clientes"
+        ],
+        "description": "Endpoint para verificar un cliente.",
         "parameters": [
           {
             "name": "id",
@@ -55,7 +171,7 @@
       }
     },
     "/login": {
-      "get": {
+      "post": {
         "tags": [
           "Usuario"
         ],
@@ -99,27 +215,114 @@
         "responses": {}
       }
     },
-    "/transacciones": {
+    "/usuario": {
       "get": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
+        "tags": [
+          "Usuario"
+        ],
+        "description": "Verifica si el usuario existe.",
+        "parameters": [
+          {
+            "name": "id",
+            "description": "id de usuario."
+          }
+        ],
         "responses": {}
       }
     },
-    "/transacciones/depositar": {
+    "/transacciones/banco/extraer": {
       "post": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
+        "tags": [
+          "Transacciones"
+        ],
+        "description": "Endpoint para extraer dinero de una cuenta del cliente.",
+        "parameters": [
+          {
+            "name": "numero_cuenta",
+            "description": "Numero de cuenta."
+          },
+          {
+            "name": "cantidad",
+            "description": "Cantidad a extraer de la cuenta."
+          },
+          {
+            "name": "dni",
+            "description": "DNI del cliente."
+          }
+        ],
         "responses": {}
       }
     },
-    "/transacciones/extraer": {
+    "/transacciones/banco/depositar": {
       "post": {
-        "tags": [],
-        "description": "",
-        "parameters": [],
+        "tags": [
+          "Transacciones"
+        ],
+        "description": "Endpoint para depositar dinero en cuenta del cliente o de tercero.",
+        "parameters": [
+          {
+            "name": "numero_cuenta",
+            "description": "Numero de cuenta."
+          },
+          {
+            "name": "cbu",
+            "description": "CBU de cuenta de tercero."
+          },
+          {
+            "name": "cantidad",
+            "description": "Cantidad a extraer de la cuenta."
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/transacciones/banco/pagar_servicio": {
+      "post": {
+        "tags": [
+          "Transacciones"
+        ],
+        "description": "Endpoint para pagar servicio en cuenta del cliente mediante el ejecutivo de banco.",
+        "parameters": [
+          {
+            "name": "facturas_ids",
+            "description": "IDs de facturas a pagar."
+          },
+          {
+            "name": "numero_cuenta",
+            "description": "Numero de cuenta."
+          },
+          {
+            "name": "cantidad",
+            "description": "Cantidad a total a pagar."
+          },
+          {
+            "name": "dni",
+            "description": "DNI del ejecutivo de banco."
+          }
+        ],
+        "responses": {}
+      }
+    },
+    "/transacciones/clientes/pagar_servicio": {
+      "post": {
+        "tags": [
+          "Transacciones"
+        ],
+        "description": "Endpoint para pagar servicio mediante el cliente.",
+        "parameters": [
+          {
+            "name": "facturas_ids",
+            "description": "IDs de facturas a pagar."
+          },
+          {
+            "name": "numero_cuenta",
+            "description": "Numero de cuenta."
+          },
+          {
+            "name": "cantidad",
+            "description": "Cantidad a total a pagar."
+          }
+        ],
         "responses": {}
       }
     }
